--- a/app/app/sass/style.scss
+++ b/app/app/sass/style.scss
@@ -10,6 +10,8 @@
   @include box-sizing(border-box);
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+}
+* {
   font-family: $font-family;
   font-size: 12px;
 }
